--- a/arch/arm/boot/dts/bcm2836.dtsi
+++ b/arch/arm/boot/dts/bcm2836.dtsi
@@ -15,7 +15,8 @@
 		compatible = "simple-bus";
 		#address-cells = <1>;
 		#size-cells = <1>;
-		ranges = <0x7e000000 0x3f000000 0x01000000>;
+		ranges = <0x7e000000 0x3f000000 0x01000000>,
+			 <0x40000000 0x40000000 0x00001000>;
 
 		timer@7e003000 {
 			compatible = "brcm,bcm2835-system-timer";
